--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio</title>
-    <link rel="stylesheet" href="/Mi Proyecto/style/style.css">
+    <link rel="stylesheet" href="/style/style.css">
 
 </head>
 <body>
@@ -32,15 +32,15 @@
                 <div class="presentacion__enlaces">
                     <h2 class="presentacion__enlaces__subtitulo">Accede a mis redes</h2>
 
-                    <a class="presentacion__enlaces__link" href="https://instagram.com/"><img src="/Mi Proyecto/assets/instagram.png" alt="Icono de instagram"> Instagram</a>
+                    <a class="presentacion__enlaces__link" href="https://instagram.com/"><img src="/assets/instagram.png" alt="Icono de instagram"> Instagram</a>
 
-                    <a class="presentacion__enlaces__link" href="https://github.com/"> <img src="/Mi Proyecto/assets/github.png" alt="Icono de github"> GitHub</a>
+                    <a class="presentacion__enlaces__link" href="https://github.com/"> <img src="/assets/github.png" alt="Icono de github"> GitHub</a>
 
-                    <a class="presentacion__enlaces__link" href="https://twitter.com/"> <img src="/Mi Proyecto/assets/twitter.png" alt="Icono de twitter"> Twitter</a>
+                    <a class="presentacion__enlaces__link" href="https://twitter.com/"> <img src="/assets/twitter.png" alt="Icono de twitter"> Twitter</a>
                 </div>
         </section>
            
-        <img class="presentacion__imagen" src="/Mi Proyecto/assets/toni.gif" alt="Foto de Ana García desarrolando un proyecto">
+        <img class="presentacion__imagen" src="/assets/toni.gif" alt="Foto de Ana García desarrolando un proyecto">
     </main>
 
     <footer>
