--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Mí</title>
-    <link rel="stylesheet" href="/Mi Proyecto/style/style.css">
+    <link rel="stylesheet" href="/style/style.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
     
 </section>
 
-        <img class="presentacion__imagen" src="/Mi Proyecto/assets/toni.gif" alt="Foto de josé Antonio fuentes Martinez desarrolando un proyecto">
+        <img class="presentacion__imagen" src="/assets/toni.gif" alt="Foto de josé Antonio fuentes Martinez desarrolando un proyecto">
     </main>
 
     <footer>
