--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                     <a class="presentacion__enlaces__link" href="https://instagram.com/"><img src="/assets/instagram.png" alt="Icono de instagram"> Instagram</a>
 
-                    <a class="presentacion__enlaces__link" href="https://github.com/"> <img src="/assets/github.png" alt="Icono de github"> GitHub</a>
+                    <a class="presentacion__enlaces__link" href="https://github.com/tucu761"> <img src="/assets/github.png" alt="Icono de github"> GitHub</a>
 
                     <a class="presentacion__enlaces__link" href="https://twitter.com/"> <img src="/assets/twitter.png" alt="Icono de twitter"> Twitter</a>
                 </div>
