--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <nav class="header__menu">
-            <a class="header__menu__link" href="index.html">Home</a>
+            <a class="header__menu__link" href="index.html">Inicio</a>
             <a class="header__menu__link"  href="about.html">Sobre mí</a>
         </nav>
     </header>
