--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <nav>
-            <a class="header__menu__link" href="index.html">Home</a>
+            <a class="header__menu__link" href="index.html">Inicio</a>
             <a class="header__menu__link"  href="about.html">Sobre mí</a>
         </nav>
     </header>
